--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-particles": "^2.12.2",
     "react-terminal-ui": "^1.0.5",
-    "react-type-animation": "^3.1.0"
+    "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.1.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
