--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.16.0",
     "react-terminal-ui": "^1.0.5",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.1.0",
-    "tsparticles-slim": "^2.12.0"
+    "tsparticles-slim": "^2.12.0",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "@types/node": "^20.6.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -36,7 +41,8 @@
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-md": "^0.22.5"
   },
   "homepage": "https://ziggyt.github.io/react-portfolio"
 }
